<resources>
    <string name="app_name">Detriclass</string>
    <string name="tab_text_1">Accueil</string>
    <string name="tab_text_2">Ajouter une photo</string>
    <string name="tab_text_3">Stats</string>
    <string name="tab_text_4">Compte</string>
    <string name="tab_text_5">Connexion</string>
    <string name="title_activity_register">Sign in</string>
    <string name="prompt_nom">Nom</string>
    <string name="prompt_prenom">Prénom</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password2">Confirm Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="messageWithLink"><a href="fragment_compte.xml">Connectez vous</a></string>
    <!--<string name="baseURL">25.93.255.33:8080</string>-->
    <string name="baseURL">localhost:8080</string>

</resources>
